[package]
name = "youtube_comment_feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
curl = "0.4.44"
serde_json = "1.0.105"
